--- a/client/src/components/Support/Support.scss
+++ b/client/src/components/Support/Support.scss
@@ -4,5 +4,18 @@
 			margin-bottom: 20px;
 			border-bottom: 1px solid $black;
 		}
+
+		.btn {
+			text-decoration: none;
+			color: $black;
+			padding: 10px 20px;
+			margin: 0 5px;
+			border: 1px solid black;
+			&:hover {
+				color: $black !important;
+				background: #f6b93b;
+				transition: all 0.7s ease 0s;
+			}
+		}
 	}
 }
